name:                conduit-backend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Barnes
maintainer:          ben.barnes@data61.csiro.au
build-type:          Simple
cabal-version:       >=1.10

executable conduit-backend
  main-is:             Main.hs
  build-depends:       base
                     , conduit-common
                     , reflex-dom
  hs-source-dirs:      src
  default-language:    Haskell2010
