name:                conduit-common
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Barnes
maintainer:          ben.barnes@data61.csiro.au
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:     aeson
                   , base
                   , bytestring
                   , text
                   , time
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Conduit.Common.Data
