name:                conduit-frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Barnes
maintainer:          ben.barnes@data61.csiro.au
build-type:          Simple
cabal-version:       >=1.10

executable conduit-frontend
  main-is:             Main.hs
  build-depends:       aeson
                     , base
                     , bytestring
                     , conduit-common
                     , containers
                     , ghcjs-dom
                     , jsaddle-warp
                     , reflex-dom
                     , reflex-dom-core
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Conduit.Frontend.Components.ErrorList
                     , Conduit.Frontend.Components.Footer
                     , Conduit.Frontend.Components.Form
                     , Conduit.Frontend.Components.Head
                     , Conduit.Frontend.Components.Nav
                     , Conduit.Frontend.API
                     , Conduit.Frontend.API.Errors
                     , Conduit.Frontend.Data.SessionEvent
                     , Conduit.Frontend.Data.WebData
                     , Conduit.Frontend.Pages.Home
                     , Conduit.Frontend.Pages.Login
                     , Conduit.Frontend.Pages.Register
                     , Conduit.Frontend.Pages.Settings
                     , Conduit.Frontend.Routes
                     , Conduit.Frontend.Router
                     , Conduit.Frontend.Storage
                     , Conduit.Frontend.Widgets
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
