name:                reflex-rwa-frontend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Barnes
maintainer:          ben.barnes@data61.csiro.au
build-type:          Simple
cabal-version:       >=1.10

executable reflex-rwa-frontend
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , jsaddle-warp
                     , reflex-rwa-common
                     , reflex-dom
                     , reflex-dom-core
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       RealWorld.Data
                     , RealWorld.Routing
